fix player animation flickering

--- a/src/app.css
+++ b/src/app.css
@@ -108,7 +108,7 @@ html.dark {
 
 html,
 body {
-	min-height: 100svh;
+	min-height: 100dvh;
 }
 
 body {
